Make sure long dates do not wrap when viewing booking schedule

--- a/app/stylesheets/partials/_hibou.scss
+++ b/app/stylesheets/partials/_hibou.scss
@@ -214,18 +214,20 @@
   .history {
     .previous, .current, .next {
       display: inline-block;
-      width: 33%;
     }
 
     .previous {
+      width: 25%;
       float: left;
     }
 
     .current {
+      width: 50%;
       text-align: center;
     }
 
     .next {
+      width: 25%;
       float: right;
       text-align: right;
     }
